# agentmesh

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  graph.py  main.py  models.py  requirements.txt
backend/agents/: evaluator.py  fixer.py  reviewer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityLog.jsx  CodeInput.jsx  EvaluatorPanel.jsx  FixerPanel.jsx  ReviewerPanel.jsx
frontend/src/hooks/: useSSEStream.js
frontend/src/pages/: About.jsx
tests/: conftest.py  test_pipeline.py
tests/samples/: divide_by_zero.py  memory_leak.js  sql_injection.py
tests/unit/: test_api.py  test_fixer_parser.py  test_graph_routing.py  test_models.py
