[project]
name = "agentmesh"
version = "0.1.0"
description = "Multi-agent AI code review pipeline using LangGraph, FastAPI, and Groq"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a live backend server (skip with '-m not e2e')",
]
